# dotfiles

./: .gitignore  colors.scss  init.sh  readme.md  shell-colors.sh
ags-4/: .env  .gitignore  app.ts  colors.scss  colors.scss.bkp  flake.nix  package-lock.json  package.json  run.sh  style.scss  test-asus-service.ts  tsconfig.json
ags-4/.context/: listener.md  network.md  nvidia.md  osd.md  readme.md
ags-4/custom-widgets/: drawingarea.ts  scrollable.ts
ags-4/libraries/: Brightness.ts
ags-4/services/: BatteryListener.ts  BrightnessListener.ts  NotificationImageCache.ts  NotificationListener.ts  NvidiaService.tsx  OSDManager.tsx  SoundService.ts  VolListener.ts  asus.ts
ags-4/utils/: logger.ts  utils.ts
ags-4/widget/: Bar.tsx
alacritty/: alacritty.toml
color-listener/: Cargo.toml  readme.md
color-listener/src/: main.rs  processor.rs
color-listener/src/applier/: ags.rs  hyprland.rs  kitty.rs  mod.rs  notes.md  ps1.rs
color-listener/src/watchers/: hyprpaper.rs  mod.rs
custombar_gtk/: .env  Cargo.toml  colors.css  flake.nix  shell.nix
custombar_gtk/crates/appbar/: Cargo.toml
custombar_gtk/crates/appbar/src/: bar.rs  lib.rs  main.rs  style.css
custombar_gtk/crates/calendar/: Cargo.toml
custombar_gtk/crates/calendar/src/: lib.rs  popup.rs  style.css
custombar_gtk/crates/capture/: Cargo.toml  TBDL.txt
custombar_gtk/crates/capture/src/: lib.rs  popup.rs  style.css
custombar_gtk/crates/clock/: Cargo.toml
custombar_gtk/crates/clock/src/: lib.rs  style.css
custombar_gtk/crates/cpu/: Cargo.toml
custombar_gtk/crates/cpu/src/: lib.rs  style.css
custombar_gtk/crates/home_btn/: Cargo.toml
custombar_gtk/crates/home_btn/src/: lib.rs  style.css
custombar_gtk/crates/power_and_systray/: Cargo.toml  Readme.md
custombar_gtk/crates/power_and_systray/src/: lib.rs  power_popup.rs  sbutils.rs  style.css  systray_popup.rs
custombar_gtk/crates/ram/: Cargo.toml
custombar_gtk/crates/ram/src/: lib.rs  style.css
custombar_gtk/crates/sound_and_brightness/: Cargo.toml
custombar_gtk/crates/sound_and_brightness/src/: brightness_popup.rs  lib.rs  sbutils.rs  sound_popup.rs  style.css
custombar_gtk/crates/utils/: Cargo.toml
custombar_gtk/crates/utils/src/: lib.rs  logger.rs  socket.rs
custombar_gtk/crates/workspaces/: Cargo.toml
custombar_gtk/crates/workspaces/src/: lib.rs  style.css
eww/: eww-rs
eww-rs/: .env  Cargo.toml  Makefile  eww.yuck  main.rs
eww-rs/src/: eww.scss  eww.yuck  main.rs  run_eww.sh
fastfetch/: config.jsonc
fuzzel/: fuzzel.ini
hypr/: CUSTOM-DOTDESKTOP.md  colors.conf  hypridle.conf  hyprland.colors.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  xdph.conf
hypr/custom-dotdesktop/: bottles.desktop.old.no-use  calc.desktop  copy.sh  gemini.desktop  (+2 more)
kitty/: colors-generated.conf  kitty.conf
nixos/: Readme.md  configuration.nix  copy-conf.sh
scripts/: az-ctrl.sh  switch-to-100.sh  volume-ctrl.sh
yazi/: yazi.toml
(+154 files in other folders)
