[package]
name = "color-listener"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "ico", "bmp", "tiff"] }
watchexec = "8.0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
rand = { version = "0.8", features = ["small_rng"] }
