[package]
name = "appbar"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reference workspace dependencies
gtk4.workspace = true
gtk4-layer-shell.workspace = true
utils.workspace = true
# logger.workspace = true
workspaces.workspace = true
home_btn.workspace = true
calendar.workspace = true
clock.workspace = true
capture.workspace = true
cpu.workspace = true
ram.workspace = true
sound_and_brightness.workspace = true
power_and_systray.workspace = true